_sass/layouts/pages/_misc.scss
/*
    Lineup
*/

body.lineup {
    .content-box {
        @media (max-width: 767px) {
            grid-template-columns: 0.5fr 8fr 0.5fr;
        }
    }

    .featured-educators {
        margin-top: 5rem;
    }
}

/*
    Content box - will override height on a per-page basis
*/

.content-box {
    @media (min-width: 768px) {
        height: 100%;
    }

    p, li {
        a {
            &:not([class*="text-"]) {
                color: $medium-slate-blue;
            }

            @media (max-width: 567px) {
                word-break: break-word;  
            }
        }
    }

    h1, .h1 {
        @media (max-width: 567px) {
            font-size: 2.1rem;
        }
    }

    h2, .h2 {
        @media (max-width: 567px) {
            font-size: 2rem;
        }
    }
}

body.about,
body[class*="collective"],
body.lineup,
body.category-science {
    .content-box {
        @media (min-width: 768px) {
            height: auto;
        }
    }
}

body.contact {
    .content-box {
        @media (max-width: 567px) {
            height: 100%;
            grid-template-columns: 0.5fr 8fr 0.5fr;
        }

        h1, .h1 {
            &:first-child {
                @media (max-width: 567px) {
                    text-align: center;
                }
            }
        }
    }
}

body.faqs {
    .content-box {
        @media (min-width: 768px) {
            height: auto;
        }

        @media (max-width: 567px) {
            padding-bottom: 0;
            grid-template-columns: 0fr 12fr 0fr;
        }

        .content-inner {
            h1, .h1, > p {
                @media (max-width: 567px) {
                    max-width: 85%;
                    margin-left: auto;
                    margin-right: auto;
                }

                a {
                    @media (max-width: 567px) {
                        font-size: 1.2rem;
                    }
                }
            }
        }
    }
}

